<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_student"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.canteen.canteenapp.ui_StudentMenu.HomeStudentFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_student_primary" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.canteen.canteenapp.ui_StudentMenu.CheckoutStudentFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_checkout_student_tab" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.canteen.canteenapp.ui_StudentMenu.ProfileStudentFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile_student" />

    <fragment
        android:id="@+id/navigation_status_student"
        android:name="com.canteen.canteenapp.ui_StudentMenu.StatusStudentFragment"
        android:label="Order Status"
        tools:layout="@layout/fragment_status_student" />

</navigation>
