<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppTheme.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.canteen.canteenapp.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/design_default_color_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:layout_width="227dp"
            android:layout_height="154dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_inti"
            app:srcCompat="@drawable/recommended1"
            tools:ignore="ContentDescription"
            tools:srcCompat="@drawable/logo_inti" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/input_login"
            android:textColorHighlight="@color/design_default_color_error"
            android:textColorHint="@color/input_login_hint" />


        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/input_login"
            android:textColorHighlight="@color/design_default_color_error"
            android:textColorHint="@color/input_login_hint" />

        <!-- Login Button -->

        <Switch
            android:id="@+id/AccountLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login as Food Seller" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/fui_bgEmail"
            android:text="@string/btn_login"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btn_login_guest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/fui_bgEmail"
            android:text="GUEST"
            android:textColor="@android:color/background_light" />


        <Button
            android:id="@+id/btn_resetpass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/fui_bgEmail" />

        <Button
            android:id="@+id/btn_signup_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="Sign Up"
            android:textAllCaps="false"
            android:textColor="@color/fui_bgEmail" />


        <!-- Link to Login Screen -->

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>